k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: throttle
  namespace: throttle
spec:
  selector:
    app: throttle
  ports:
    - port: 8080
      targetPort: 8080
